[gd_scene load_steps=9 format=3 uid="uid://d0kob3vh6v80i"]

[ext_resource type="Script" uid="uid://dyo0n6ncwx6f1" path="res://source/title_screen/title_screen.gd" id="1_518vd"]
[ext_resource type="Texture2D" uid="uid://crgom4vir4vqv" path="res://assets/sprites/title_screen/firered_pokemon_art.png" id="2_ifn6v"]
[ext_resource type="Shader" uid="uid://cm5n4mwparevu" path="res://source/title_screen/flash.gdshader" id="3_ifn6v"]
[ext_resource type="Texture2D" uid="uid://i3821vwtlnd5" path="res://assets/sprites/title_screen/pokemon_title_logo.png" id="3_ps8sl"]
[ext_resource type="Texture2D" uid="uid://bnp7ae46yu8rb" path="res://assets/sprites/title_screen/firered_title_logo.png" id="4_p87ct"]
[ext_resource type="Texture2D" uid="uid://el2iphkufh3o" path="res://assets/sprites/title_screen/press_start.png" id="6_p87ct"]
[ext_resource type="AudioStream" uid="uid://cie1m44m84mru" path="res://assets/audio/music/title_screen.mp3" id="6_ps8sl"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ps8sl"]
shader = ExtResource("3_ifn6v")
shader_parameter/flash_color = Color(0.937255, 0.945098, 0.968627, 1)
shader_parameter/flash_value = 0.0

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_518vd")

[node name="BackgroundColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
metadata/_edit_lock_ = true

[node name="TopColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 240.0
offset_bottom = 9.0
color = Color(0.513726, 0.109804, 0.0313726, 1)
metadata/_edit_lock_ = true

[node name="MiddleColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -130.0
offset_right = 120.0
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.360784, 0.694118, 0.643137, 1)
metadata/_edit_lock_ = true

[node name="BottomColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -10.0
offset_right = 120.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.513726, 0.109804, 0.0313726, 1)
metadata/_edit_lock_ = true

[node name="Sprites" type="Node2D" parent="."]
material = SubResource("ShaderMaterial_ps8sl")
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="PokemonArt" type="Sprite2D" parent="Sprites"]
use_parent_material = true
texture = ExtResource("2_ifn6v")
centered = false

[node name="PokemonTitleLogo" type="Sprite2D" parent="Sprites"]
use_parent_material = true
texture = ExtResource("3_ps8sl")
centered = false

[node name="VersionTitleLogo" type="Sprite2D" parent="Sprites"]
use_parent_material = true
position = Vector2(87, 88)
texture = ExtResource("4_p87ct")

[node name="PressStart" type="Sprite2D" parent="."]
position = Vector2(86, 126)
texture = ExtResource("6_p87ct")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_ps8sl")
volume_db = -25.0
